# k2lab_runpod

./: .dockerignore  .gitignore  Dockerfile.workspace  README.md  pyproject.toml
.github/workflows/: workspace-image.yml
deploy/workspace/: README.md  entrypoint.sh
docs/: runpod_web_workspace_spec.md  runpod_workspace_operations.md  web_desktop_parity.md
scripts/: k2lab-runpod
src/k2_region_lab/: __init__.py  config.py  debug.py  face_detail.py  http_security.py  image_edit.py  memory.py  output.py  project.py  regional_lora.py  regional_prompting.py  sampling.py  spatial_attention.py
src/k2_region_lab/agent/: __init__.py  app.py  domain.py  downloads.py  faces.py  jobs.py  migrations.py  storage.py  transfers.py
src/k2_region_lab/lora/: __init__.py  compatibility.py  library.py
src/k2_region_lab/model/: __init__.py  artifacts.py  manifests.py
src/k2_region_lab/regions/: __init__.py  layout.py
src/k2_region_lab/web/: __init__.py  agent_client.py  app.py  credential_vault.py  development_backend.py  domain.py  lease_reaper.py  (+5 more)
tests/: test_config.py  test_debug.py  test_face_detail.py  test_geometry.py  test_image_edit.py  test_local_runpod.py  test_lora_library.py  test_memory.py  test_model_artifacts.py  test_output.py  test_post_upscale.py  test_project.py  test_projector.py  test_regional_lora.py  test_regional_prompting.py  test_runpod_backend.py  test_runpod_live_acceptance.py  test_sampling.py  test_web_control_plane.py  test_worker_protocol.py  test_workspace_agent.py
web/client/: index.html  package-lock.json  package.json  vite.config.ts
(+37 files in other folders)
