[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "k2lab-runpod"
version = "0.1.2"
description = "RunPod-hosted web workspace for K2 regional generation, editing, and face refinement"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.1",
    "pillow>=12.3.0",
    "pydantic>=2.10",
    "safetensors>=0.5",
]

[project.optional-dependencies]
model = [
    "diffusers>=0.32",
    "torch>=2.9.0",
    "transformers==4.57.1",
]
web = [
    "aiosqlite>=0.21,<1",
    "asyncpg>=0.30,<1",
    "cryptography>=48.0.1,<49",
    "fastapi>=0.115,<1",
    "huggingface-hub>=0.36,<1",
    "httpx>=0.28,<1",
    "sqlalchemy[asyncio]>=2.0.51,<2.1",
    "uvicorn[standard]>=0.34,<1",
]
dev = [
    "onnxruntime>=1.20",
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.scripts]
k2lab-agent = "k2_region_lab.agent.app:main"
k2lab-web = "k2_region_lab.web.app:main"
k2lab-runpod = "k2_region_lab.web.local_runpod:main"

[tool.hatch.build.targets.wheel]
packages = ["src/k2_region_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
